# HDMaps

./: .gitignore  HDM.py  LICENSE  README.md  __init__.py  convert.py  docs.md  matlab_coords.mat  pyproject.toml  requirements.txt  test.py  todo.md
.github/workflows/: test.yml
HDM/: HDM.py  __init__.py  backend.py  cpu.py  cupy.py  distances.py  jax.py  kernels.py  spatial.py  spectral.py  utils.py  validate.py  visualization_tools.py  visualize.py
HDM/backends/: HDM_CPU.py  HDM_GPU_CuPy.py  HDM_GPU_PyTorch.py
HDM/src/: mds_embed.py  run_HDM_wings_GPU_CuPy.py  wing_preprocess.py
HDM/src/backends/: HDM_GPU_PyTorch.py
HDM/src/legacy/: HDM-class-based.py  HDM-imperative.py
HDM/src/wings_legacy/: compute_wing_maps.py  parse_wings.py
HDM/tests/: test_HDM_teeth_CPU.py  test_hdm.py  test_spatial.py  utils.py
HDM/utils/: containers.py  spatial.py  visualize.py
benchmark/: benchmark.py  load_off.py  load_wings.py
data/: cPMSTDistMatrix.mat  names.mat
docs/: HDM.html  index.html  search.js
docs/HDM/: HDM.html  block_mul.html  distances.html  kernels.html  spectral.html  utils.html  validate.html  visualize.html
examples/: teeth.py  wings.py
src/: HDM-class-based.py  HDM.py  HDM_CPU.py  HDM_GPU.py  HDM_GPU_CuPY.py  HDM_GPU_PyTorch.py  HDM_dataclasses.py  HDM_par.py  HDM_teeth.py  HDM_teeth_CPU.py  HDM_teeth_GPU.py  HDM_wings.py  HDM_wings_diffusion.py  data_prep.py  diffusion.py  mat_to_polars.py  mds_embed.py  run_HDM_teeth_CPU.py  run_HDM_teeth_GPU_CuPy.py  run_HDM_teeth_GPU_PyTorch.py  run_HDM_teeth_GPU_PyTorch_CuPy.py  run_HDM_wings_CPU.py  visualize.py  wing_preprocess.py
src/backends/: HDM_CPU.py
src/legacy/: HDM-class-based.py  HDM-imperative.py  HDM_misc.py
tests/: test_hdm.py
