[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HDM"
version = "0.0.1"
authors = [
  { name="Felix Risbro Hjerrild", email="felix+signDNE@hjerrild.org" },
  { name="Sofus Hesseldahl Laubel", email="slaub21@student.sdu.dk"}
]
description = "HDM description"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
dependencies = ['scipy==1.14.1', 'trimesh==4.6.8', 'numpy', 'pyvista==0.45.0', 'scikit-learn==1.6.1', 'tqdm==4.67.1']

[project.urls]
Homepage = "https://github.com/frisbro303/HDM_Python"


[project.scripts]
hdm_func = "HDM:HDM"
