[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HDM"
version = "0.0.1"
authors = [
  { name="Felix Risbro Hjerrild", email="felix+signDNE@hjerrild.org" },
  { name="Sofus Hesseldahl Laubel", email="slaub21@student.sdu.dk"}
]
description = "HDM description"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
dependencies = ['scipy', 'jax', 'numpy']

[project.urls]
Homepage = "https://github.com/frisbro303/HDM_Python"

[tool.setuptools.packages.find]
include = ["HDM*"]
